--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 Open the index.html file in your browser.  That's all I got right now.
+
+running some stuff
+
+`npm run compile`
+
+testing:
+`npm run pretest`
+`mocha`
